--- a/imports/ui/components/profile-sidebar/profile-sidebar.html
+++ b/imports/ui/components/profile-sidebar/profile-sidebar.html
@@ -66,7 +66,7 @@
   Polymer({
     is: 'profile-sidebar',
     attached: function() {
-      Meteor.call('getOwnUser', (err,res) => this.user = res );
+      Meteor.call('getOwnUserFacebook', (err,res) => this.user = res );
     },
     saveProfile: function() {
       this.fire('saveProfile');
