--- a/imports/ui/views/main-view.html
+++ b/imports/ui/views/main-view.html
@@ -38,13 +38,13 @@
 
         <!-- <fsn-meta-tags attr-for-selected="data-route" selected=[[path]]> -->
         <div>
-          <fsn-meta-tag path='/' title='Finding roommates made easy - houseme' meta='{
+          <fsn-meta-tag path='/' title='Finding roommates made easy - houseme (beta)' meta='{
             "description": "Are you looking for a roommate? We will help you find the perfect one!"
           }'></fsn-meta-tag>
 
           <fsn-meta-tag meta='{
             "property": "og:title",
-            "content": "Finding roommates made easy - houseme"
+            "content": "Finding roommates made easy - houseme (beta)"
           }'></fsn-meta-tag>
 
           <fsn-meta-tag meta='{
@@ -77,7 +77,7 @@
           </template>
 
           <template is='iron-lazy-page' data-route='/messages'>
-            <messages-view to-user-id=[[toUserId]] user-selected=[[toUserId]]></messages-view>
+            <messages-view to-user-id=[[toUserId]] message-id=[[messageId]] user-selected=[[userSelected]]></messages-view>
           </template>
 
           <template is='iron-lazy-page' data-route='/search'>
@@ -86,6 +86,10 @@
 
           <template is='iron-lazy-page' data-route='/talk'>
             <talk-view></talk-view>
+          </template>
+
+          <template is='iron-lazy-page' data-route='/analytics'>
+            <analytics-view></analytics-view>
           </template>
         </iron-lazy-pages>
         <!--
@@ -116,9 +120,9 @@ require('../components/paper-navigation/paper-navigation.html');
 Polymer({
   is: 'main-view',
   properties: {
-    toUserId: {
-      type: String,
-    }
+    toUserId: String,
+    messageId: String,
+    userSelected: Boolean
   },
   observers: [
     // '_lockScroll(isLoading)',
@@ -126,17 +130,32 @@ Polymer({
   ],
   listeners: {
     'route-selected': 'changeRoute',
-    'message-userid-changed': 'setMessageUserId',
-    'message-userid-ready': 'notifyToUserId'
+    'userid-selected': 'setUserSelected',
+    'user-selected-false': 'resetUserSelected',
+    'message-view-ready': 'notifyMessageView'
   },
-  setMessageUserId: function(e) {
+  resetUserSelected: function() {
+    console.log('re-setting user selected data');
+    this.userSelected = false;
+    this.toUserId = undefined;
+  },
+  setUserSelected: function(e) {
+    console.log('setting dafuq user selected data');
+    console.log(this.userSelected = true);
+    console.log(e.detail);
+    console.log(undefined);
+    this.userSelected = true;
     this.toUserId = e.detail;
+    this.messageId = undefined;
+    this.notifyMessageView();
   },
-  notifyToUserId: function() {
-    var toUserId = this.toUserId;
-    this.set('toUserId', 'lorem');
-    this.set('toUserId', toUserId);
+  // notify the userId or otherwise binding won't update
+  notifyMessageView: function() {
+    this.notifyPath('userSelected', this.userSelected);
+    this.notifyPath('toUserId', this.toUserId);
+    this.notifyPath('messageId', this.messageId);
   },
+  // takes route path where to go
   changeRoute: function(e) {
     this.path = e.detail.path;
   },
@@ -153,6 +172,7 @@ Polymer({
     true || require('./messages-view.html');
     true || require('./profile-view.html');
     true || require('./talk-view.html');
+    true || require('./analytics-view.html');
     //
     path === '/' ? require(`/imports/ui/views/signup-view.html`) : require(`/imports/ui/views${path}-view.html`);
   }
