--- a/imports/ui/components/user-onboarding/user-onboarding.html
+++ b/imports/ui/components/user-onboarding/user-onboarding.html
@@ -83,24 +83,23 @@
 
     </style>
 
-
-    <user-onboarding-stepper logo='/svg/houseme_logo.svg' on-onboarding-submit=''>
-      <user-onboarding-step>
-        <h3><strong>Hi Andreas,</strong><br />how can we help you?</h3>
-        <fsn-select-buttons id='situation' attr-for-selected='value' selected={{months}}>
-          <fsn-select-button value='1'>I need a roommate and an apartment</fsn-select-button>
-          <fsn-select-button value='2'>I have an apartment but need a roommate</fsn-select-button>
+    <user-onboarding-stepper logo='/svg/houseme_logo.svg' on-onboarding-submit='saveProfile'>
+      <user-onboarding-step selected=[[apartment]] valid=[[isSelected(apartmentSelected)]]>
+        <h3 text-center><strong>Hi Andreas,</strong><br />how can we help you?</h3>
+        <fsn-select-buttons id='situation' attr-for-selected='value' selected={{apartment}} selected-item={{apartmentSelected}}>
+          <fsn-select-button value='false'>I need a roommate and an apartment</fsn-select-button>
+          <fsn-select-button value='true'>I have an apartment but need a roommate</fsn-select-button>
         </fsn-select-buttons>
       </user-onboarding-step>
 
-      <user-onboarding-step>
-        <h3>Where do you want to move?</h3>
-        <fsn-places-autocomplete label='Choose a city' value={{city}}></fsn-places-autocomplete>
+      <user-onboarding-step valid=[[citySelected]]>
+        <h3 text-center>Where do you want to move?</h3>
+        <fsn-places-autocomplete label='Choose a city' value={{city}} valid={{citySelected}}></fsn-places-autocomplete>
       </user-onboarding-step>
 
-      <user-onboarding-step>
+      <user-onboarding-step valid=[[isSelected(monthsSelected)]]>
         <h3>For how many months?</h3>
-        <fsn-select-buttons id='months' attr-for-selected='value' selected={{months}}>
+        <fsn-select-buttons id='months' attr-for-selected='value' selected={{months}} selected-item={{monthsSelected}}>
           <fsn-select-button value='1'>1</fsn-select-button>
           <fsn-select-button value='2'>2</fsn-select-button>
           <fsn-select-button value='3'>3</fsn-select-button>
@@ -111,14 +110,14 @@
         </fsn-select-buttons>
       </user-onboarding-step>
 
-      <user-onboarding-step next-button-text='finish your profile'>
-        <h3>What's your monthly rent budget?</h3>
+      <user-onboarding-step valid>
+        <h3 text-center>What's your monthly rent budget?</h3>
         <!-- <paper-slider value={{budget}} min='100' editable></paper-slider> -->
-        <paper-slider value='500' min='1000' max='100000' step='500' snaps editable></paper-slider>
+        <paper-slider value='{{budget}}' min='1000' max='100000' step='500' snaps editable required></paper-slider>
       </user-onboarding-step>
 
-      <user-onboarding-step next-button-text='search for roommates'>
-        <h3><strong>You're all set up! One more thing:</strong><br />Do you want to get push notifications for updates</h3>
+      <user-onboarding-step next-button-text='search for roommates' valid>
+        <h3 text-center><strong>You're all set up! One more thing:</strong><br />Do you want to get push notifications for updates</h3>
         <span>
           <p>Push notifications</p>
           <paper-toggle-button on-change='registerPushNotifications'></paper-toggle-button>
@@ -126,60 +125,6 @@
       </user-onboarding-step>
 
     </user-onboarding-stepper>
-
-    <!-- <img src='/svg/houseme_logo.svg' />
-    <h3>What's your monthly rent budget?</h3>
-    <paper-slider value={{budget}} min='100' editable></paper-slider>
-    <paper-slider value='500' min='1000' max='100000' step='500' snaps editable></paper-slider>
-    <paper-button>finish your profile</paper-button> -->
-
-    <!-- <img src='/svg/houseme_logo.svg' />
-
-    <h3><strong>You're all set up! One more thing:</strong><br />Do you want to get push notifications for updates</h3>
-
-    <span>
-      <p>Push notifications</p>
-      <paper-toggle-button on-change='registerPushNotifications'></paper-toggle-button>
-    </span>
-
-    <paper-button>search for roommates</paper-button> -->
-
-    <!-- <img src='/svg/houseme_logo.svg' />
-
-    <h3><strong>Hi Andreas,</strong><br />how can we help you?</h3>
-
-    <fsn-select-buttons id='situation' attr-for-selected='value' selected={{months}}>
-      <fsn-select-button value='1'>I need a roommate and an apartment</fsn-select-button>
-      <fsn-select-button value='2'>I have an apartment but need a roommate</fsn-select-button>
-    </fsn-select-buttons>
-
-    <paper-button>next step</paper-button> -->
-
-<!--
-
-    <img src='/svg/houseme_logo.svg' />
-
-    <h3>Where do you want to move?</h3>
-
-    <fsn-places-autocomplete label='Choose a city' value={{city}}></fsn-places-autocomplete>
-
-    <paper-button>next step</paper-button> -->
-
-    <!-- <img src='/svg/houseme_logo.svg' />
-
-    <h3>For how many months?</h3>
-
-    <fsn-select-buttons id='months' attr-for-selected='value' selected={{months}}>
-      <fsn-select-button value='1'>1</fsn-select-button>
-      <fsn-select-button value='2'>2</fsn-select-button>
-      <fsn-select-button value='3'>3</fsn-select-button>
-      <fsn-select-button value='4'>4</fsn-select-button>
-      <fsn-select-button value='5'>5</fsn-select-button>
-      <fsn-select-button value='6'>6</fsn-select-button>
-      <fsn-select-button value='7'>7+</fsn-select-button>
-    </fsn-select-buttons>
-
-    <paper-button>next step</paper-button> -->
 
   </template>
 </dom-module>
@@ -199,14 +144,50 @@
 
   Polymer({
     is: 'user-onboarding',
+    properties: {
+      budget: {
+        type: Number,
+        value: 10000
+      },
+      months: {
+        type: String,
+        value: undefined
+      }
+    },
+    validateCity: function() {
+      console.log('city has been selected');
+    },
+    isSelected: function(selectedItem) {
+      return selectedItem != undefined;
+    },
     registerPushNotifications: function(e) {
       if(e.target.checked) {
         console.log('register for notification');
         // push notification stuff here
+        window.OneSignal.push(['registerForPushNotifications']);
       }
     },
     confirmStep: function() {
       this.$$('user-onboarding-stepper').confirmStep();
+    },
+    saveProfile: function() {
+      // console.log('saving profile');
+      let options = {
+        profile: {
+          active: true,
+          logged_in: true,
+          details: {
+            has_apartment: this.apartment === 'true',
+            moving_to: this.city,
+            maximum_budget: this.budget,
+            move_in_date: 'Jun',
+            // move_in_date: this.user.date,
+            duration_of_stay: this.months,
+          }
+        }
+      };
+      console.log(options);
+      // Meteor.call('submitProfile', options, (err, res) => console.log('saved profile'));
     }
   });
 </script>
