load onboarding conditionally

--- a/imports/ui/components/user-onboarding-stepper/user-onboarding-step.html
+++ b/imports/ui/components/user-onboarding-stepper/user-onboarding-step.html
@@ -12,6 +12,7 @@
       div {
         @apply(--layout-horizontal);
         @apply(--layout-center);
+        margin-top:50px;
       }
 
     </style>
@@ -56,6 +57,10 @@
         type: String,
         value: 'back'
       },
+      autoConfirm: {
+        type: Boolean,
+        value: false
+      }
     },
     behaviors: [
       Polymer.NeonAnimatableBehavior
